@@ -1,5 +1,5 @@
 /* {{{
- * Copyright (c) 2011, Bernhard Walle <bernhard@bwalle.de>
+ * Copyright (c) 2008-2010, Bernhard Walle <bernhard@bwalle.de>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -25,35 +25,24 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. }}}
  */
 
-#ifndef SERIALFILE_PRIVATE_POSIX_H
-#define SERIALFILE_PRIVATE_POSIX_H
-
-#include <string>
+#include "serialfile.h"
 
 namespace bw {
+namespace io {
 
-/* SerialFilePrivate {{{ */
+/* SerialFile {{{ */
 
-/**
- * @brief Data object for SerialFile.
- *
- * The reason why that data objects are not members of SerialFile is just that we can provide
- * the same interface for different platforms and have the concrete (typed) members as private
- * data of the platform implementation.
- */
-struct SerialFilePrivate
+/* ---------------------------------------------------------------------------------------------- */
+bool SerialFile::createLock()
 {
-    SerialFilePrivate(const std::string &portName)
-        : fileName(portName)
-        , fd(-1) {}
+    return true;
+}
 
-    std::string fileName;
-    std::string lastError;
-    int         fd;
-};
+/* ---------------------------------------------------------------------------------------------- */
+void SerialFile::removeLock()
+{}
 
 /* }}} */
 
+} // end namespace io
 } // end namespace bw
-
-#endif /* SERIALFILE_PRIVATE_POSIX_H */
