@@ -1,6 +1,7 @@
 2011-02-27  Bernhard Walle <bernhard@bwalle.de>
 
 	* Locking serial port works different on Linux and Mac OS.
+	* Move serial file into own subdirectory and namespace 'io'.
 
 2011-02-26  Bernhard Walle <bernhard@bwalle.de>
 
